<resources>
    <string name="app_name">First_Aid</string>
    <string name="industries_list">Список отраслей</string>
    <string name="back">Назад</string>
    <string name="incidents">Происшествия</string>
    <string name="incident_1">Инцидент 1</string>
    <string name="incident_2">Инцидент 2</string>
    <string name="incident_3">Инцидент 3</string>
    <string name="choice">Выберите отрасль из списка:</string>
    <string name="teacher">Преподаватель</string>
    <string name="doctor">Врач</string>
    <string name="comp_master">Компьютерный мастер</string>
    <string name="driver">Водитель общественного транспорта</string>
    <string name="universal">Универсальные инструкции</string>
    <string name="title">Заголовок 1</string>
    <string name="first_aid">Первая Помощь</string>
    <string name="instruction_text">Текст инструкции по оказанию первой помощи</string>
    <string name="language">Язык</string>
    <string name="russian">Русский</string>
    <string name="english">Английский</string>
    <string name="change_language">Сменить язык</string>
    <string name="cut_description">Порез руки - промыть рану, обработать антисептиком, наложить повязку</string>
    <string name="burn_description">Ожог - охладить место ожога, нанести противоожоговую мазь, наложить стерильную повязку</string>
    <string name="fracture_description">Перелом - обездвижить конечность, приложить холод, доставить в травмпункт</string>

    <string name="registration">Регистрация</string>
    <string name="authorization">Авторизация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="select_position">Выберите должность</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login_button">Войти</string>
    <string name="already_have_account_login">Уже есть аккаунт? Войти</string>
    <string name="dont_have_account_register">Нет аккаунта? Зарегистрироваться</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="login_already_exists">Логин уже существует</string>
    <string name="registration_success">Регистрация успешна!</string>
    <string name="registration_failed">Ошибка регистрации</string>
    <string name="login_success">Вход выполнен успешно!</string>
    <string name="invalid_login_or_password">Неверный логин или пароль</string>
    <string name="exit">Выход</string>

    <string-array name="positions_array">
        <item>Преподаватель</item>
        <item>Врач</item>
        <item>Мастер ПК</item>
        <item>Водитель</item>
        <item>Универсальный</item>
    </string-array>

    <string name="logout">Выйти</string>
    <string name="logout_confirmation">Вы уверены, что хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="admin_panel">Панель администратора</string>
    <string name="add_new_user">Добавить нового пользователя</string>
    <string name="users_list">Список пользователей</string>
    <string name="add_user">Добавить пользователя</string>
    <string name="login_reserved">Логин \'admin\' зарезервирован</string>
    <string name="user_added">Пользователь добавлен</string>
    <string name="user_deleted">Пользователь удален</string>
    <string name="cannot_delete_admin">Нельзя удалить администратора</string>
    <string name="delete_user_confirmation">Вы уверены, что хотите удалить пользователя %s?</string>

    <string name="theme">Тема</string>
    <string name="light_theme">Светлая</string>
    <string name="dark_theme">Тёмная</string>
    <string name="system_theme">Системная</string>


    <string name="settings">Настройки</string>
    <string name="about_app">О приложении</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Связаться с поддержкой</string>
    <string name="back_to_main">Вернуться на главную</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>