<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Incidents">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/incident1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:drawableStart="@android:drawable/menu_frame"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/incident_1"
            android:textColor="@color/blue_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/incident2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:drawableStart="@android:drawable/menu_frame"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/incident_2"
            android:textColor="@color/blue_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/incident3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:drawableStart="@android:drawable/menu_frame"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/incident_3"
            android:textColor="@color/blue_text"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_toolbar"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:background="@color/common_background_toolbar"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:contentInsetStart="0dp">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:onClick="goToFirstActivity"
                    app:srcCompat="@drawable/back_button_48" />

                <TextView
                    android:id="@+id/textViewFirstAid2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/incidents"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="26sp" />


        </androidx.appcompat.widget.Toolbar>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>